front page mobile view content overflow bug patch

--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ Version: 1.0
 	#third-feature .text-block {
 		position: relative;
 		float: left;
-		left: 42%;
+		left: 35%;
 		transform: translate(-25%, -25%);
 		padding-top: 100px;
 	}
